src/components/Header/Header.css
.app__header {
  position: absolute;
  top: 5px;
  left: 5px;
  right: 5px;
  padding: 8px;
}

.header__heading {
  font-family: Arial, sans-serif;
  letter-spacing: -1px;
}

.heading__img {
  position: absolute;
  top: 8px;
  right: 8px;
}

@media screen and (max-width: 624px) {
  .heading__img {
    display: none;
  }
}

.heading__version {
  font-size: 10px;
  text-decoration: none;
  vertical-align: sub;
  margin-left: -5px;
  letter-spacing: 0;
}

